# Jenoptik

./: CMakeLists.txt  Jenoptik.qmlproject  README.md  main.qml  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Jenoptik/: CMakeLists.txt  qmldir
imports/Jenoptik/designer/: plugin.metainfo
qml/components/: CanvasDrawingArea.qml  EventBus.qml  LayerTableView.qml  NavBar.qml  SideBarComponent.qml  ToolBarComponent.qml
qml/components/dialogs/: AdvancedParamsDialog.qml  MaterialDialog.qml  ScanParamsDialog.qml
qml/components/shared/: ComboBoxComponent.qml  GeometryButtonComponent.qml  NotificationBanner.qml  NumericInputComponent.qml  RoundButtonComponent.qml  SliderComponent.qml
src/: import_qml_plugins.h  main.cpp  resources.qrc
src/controllers/: LaserParamController.cpp  LaserParamController.h  MaterialController.cpp  MaterialController.h
src/database/: DBConnection.cpp  DBConnection.h
src/models/: LaserParam.cpp  LaserParam.h  Material.cpp  Material.h
src/services/: LaserParamService.cpp  LaserParamService.h  MaterialService.cpp  materialservice.h
